# jamsh

./: README.md  pyproject.toml
src/jamsh/: __init__.py  demo.py  subprocess_utils.py
tests/: test_subprocess_utils.py
