[project]
name = "jamsh"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Asher Mancinelli", email = "amancinelli@nvidia.com" }
]
requires-python = ">=3.13"
dependencies = []

[build-system]
requires = ["uv_build>=0.11.19,<0.12.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "pytest>=8.0.0",
]
