[project]
name = "jamsh"
version = "0.1.0"
description = "small shell utils for personal use"
readme = "README.md"
authors = [
    { name = "Asher Mancinelli", email = "ashermancinelli@gmail.com" }
]
requires-python = ">=3.13"
dependencies = [
    "rich>=13.0.0",
]

[build-system]
requires = ["uv_build>=0.11.19,<0.12.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "pytest>=8.0.0",
]
